# travis

./: .gitignore  CMakeLists.txt  LICENSE  README.md
StringExtensions/: CMakeLists.txt  README.md
StringExtensions/include/StringExtensions/: StringExtensions.hpp
StringExtensions/src/: StringExtensions.cpp
StringExtensions/test/: CMakeLists.txt
StringExtensions/test/src/: StringExtensionsTests.cpp
Uri/: CMakeLists.txt  README.md
Uri/include/Uri/: Uri.hpp
Uri/src/: CharacterSet.cpp  CharacterSet.hpp  PercentEncodedCharacterDecoder.cpp  PercentEncodedCharacterDecoder.hpp  Uri.cpp
Uri/test/: CMakeLists.txt
Uri/test/src/: CharacterSetTests.cpp  PercentEncodedCharacterDecoderTests.cpp  UriTests.cpp
